--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "homepage": "https://github.com/cs-devops-bootcamp/devops-01-P2-TeamA#readme",
   "dependencies": {
     "fastify": "^3.0.0",
+    "fastify-autoload": "^3.11.0",
+    "fastify-cli": "^2.15.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-autoload": "^3.10.0",
-    "fastify-sensible": "^3.1.2",
-    "fastify-cli": "^2.15.0"
+    "fastify-sensible": "^3.1.2"
   },
   "devDependencies": {
     "tap": "^15.1.6"
