--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: team-a/docker-build-mini-server:v1.0.0
+          IMAGE_TAG: ${{ github.sha }}
           
         run: |
           docker buildx build --platform=linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
