--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: latest
+          IMAGE_TAG: ${COMMIT_HASH:=latest}
           
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
