--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -1,8 +1,9 @@
 name: Build and Push Docker Image
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+    tags : 
+      -'v*'
       
 jobs:
   build-and-push-image:
@@ -22,12 +23,26 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - uses: actions/checkout@v2
+      - name: 버전 정보 추출
+        run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        id: extract_version_name       
+     
+      - name: Release 생성 
+        uses: actions/create-release@v1
+        env: 
+         GITHUB_TOKEN: ${{ secrets.TEAMAGITHUB_TOKEN }}
+        with: 
+         tag_name: ${{ steps.extract_version_name.outputs.version }} 
+         release_name: ${{ steps.extract_version_name.outputs.version }}
+         
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
+          
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: ${{ steps.tag_version.outputs.new_tag }}
+          IMAGE_TAG: ${{ steps.extract_version_name.outputs.version }}
 
           
         run: |
