--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -22,12 +22,27 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - uses: actions/checkout@v2
+      - name: 버전 정보 추출
+        run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        id: extract_version_name       
+     
+      - name: Release 생성 
+        uses: actions/create-release@v1
+        env: 
+         GITHUB_TOKEN: ${{ secrets.TEAMAGITHUB_TOKEN }}
+        with: 
+         tag_name: ${{ steps.extract_version_name.outputs.version }} 
+         release_name: ${{ steps.extract_version_name.outputs.version }}
+         
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
+          
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: latest
+          IMAGE_TAG: ${{ steps.extract_version_name.outputs.version }}
+
           
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -40,9 +55,3 @@ jobs:
         with:
           format: YYYYMMDD_HH-mm-ss
           utcOffset: "+09:00"
-
-      - name: Generate deployment package
-        run: |
-          mkdir -p deploy
-          cp Dockerrun.aws.json deploy/Dockerrun.aws.json
-          cd deploy && zip -r deploy.zip .
