--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -27,6 +27,13 @@ jobs:
         run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
         id: extract_version_name       
 
+      - name: Release 생성 
+        uses: actions/create-release@v1
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with: 
+          tag_name: ${{ steps.extract_version_name.outputs.version }} 
+          release_name: ${{ steps.extract_version_name.outputs.version }} 
          
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -34,7 +41,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: ${{ github.ref }}
+          IMAGE_TAG: ${{ steps.extract_version_name.outputs.version }}
 
           
         run: |
@@ -42,20 +49,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TEAMAGITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false       
+             
           
       - name: Get current time
         uses: 1466587594/get-current-time@v2
