--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -10,7 +10,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+        
+      - name: Get current time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
+        with:
+          format: YYYYMMDD_HH-mm-ss
+          utcOffset: "+09:00"
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -28,7 +35,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"   
+          IMAGE_TAG: ${{ steps.current-time.outputs.registry }}   
           
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -37,10 +44,5 @@ jobs:
           
      
           
-      - name: Get current time
-        uses: 1466587594/get-current-time@v2
-        id: current-time
-        with:
-          format: YYYYMMDD_HH-mm-ss
-          utcOffset: "+09:00"
+
 
