--- a/.github/workflows/ECR.yml
+++ b/.github/workflows/ECR.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: team-a
-          IMAGE_TAG: ${{ current-time.outputs }}   
+          IMAGE_TAG: good   
           
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
