--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,16 +30,15 @@ on:
   push:
     branches:
       - main
-      - feat3
 
 env:
-  AWS_REGION: ap-northest-2                  # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-northeast-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: team-a           # set this to your Amazon ECR repository name
-  #ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  #ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  #ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  ECS_SERVICE: mongo-service                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: team-a-cluster                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: fin-task-v1 # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  #CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  CONTAINER_NAME: mongo-cont           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
