--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-northest-2                  # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-northeast-2                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: jaehyeok         # set this to your Amazon ECR repository name
   ECS_SERVICE: jaehyeok-service                # set this to your Amazon ECS service name
   ECS_CLUSTER: jaehyeok-cluster                # set this to your Amazon ECS cluster name
