--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,11 +34,11 @@ on:
 env:
   AWS_REGION: ap-northeast-2                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: jaehyeok         # set this to your Amazon ECR repository name
-  ECS_SERVICE: jaehyeok-service                # set this to your Amazon ECS service name
+  ECS_SERVICE: jaehyeok-service-2                # set this to your Amazon ECS service name
   ECS_CLUSTER: jaehyeok-cluster                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: jaehyeok-container           # set this to the name of the container in the
+  CONTAINER_NAME: jaehyoek-container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
