--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tap \"test/**/*.test.js\"",
-    "start": "FASTIFY_ADDRESS = 0.0.0.0 fastify start -l info app.js",
+    "start": "FASTIFY_ADDRESS = 0.0.0.0 fastify start -l info app.js", //80번포트
     "dev": "fastify start -w -l info -P app.js"
   },
   "repository": {
