--- a/.github/workflows/master-deploy-work.yml
+++ b/.github/workflows/master-deploy-work.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn
 
       - name: Build
-        run: yarn build
+        run: npm install, yarn build
 
       - name: Deploy
         env:
