--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.11.0",
     "fastify-cli": "^2.15.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.2"
   },
